[package]
name = "mitre_cli"
version = "1.0.0"
edition = "2021"

[dependencies]
structopt = "0.3.26"
reqwest = {version = "0.11.10", features = ["blocking"]}
select = "0.6.0"
lazy_static = "1.4.0"
regex = "1.6.0"
comfy-table = "6.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["std"] }
home = "0.5.5"
log = "0.4.20" 
env_logger = "0.10.0"
